# cnc-dashboard

./: .eslintignore  .flake8  .gitignore  .prettierignore  data_transfer.py  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh
apps/backend/: .env.example  Dockerfile  requirements.txt
apps/backend/app/: containers.py  main.py  mqtt.py
apps/backend/app/config/: __init__.py  broker.py  db.py  socket.py
apps/backend/app/db/: elastic_search.py
apps/fastapi/: requirements.txt
apps/fastapi/app/: containers.py  main.py  mqtt.py
apps/frontend/: Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js
apps/frontend/public/: manifest.json
apps/frontend/src/: App.tsx  index.tsx
apps/preprocessing/: Dockerfile  requirements.txt
apps/preprocessing/app/: main.py
apps/provider/: cnc_temp.py  data-generator.py  data-provider.py  data_transfer.py
apps/server/: package-lock.json  package.json  server.js
apps/server/fast-api/: main.py  validation.py
apps/web/: package-lock.json  package.json
apps/web/public/: index.html  manifest.json
apps/web/src/: App.tsx  index.tsx  types.ts
cnc_data/: 2024-06-11.csv  2024-06-12.csv  2024-06-13.csv
server/: server.js
web/: Dockerfile  package-lock.json  package.json
web/public/: index.html
web/src/: App.tsx  index.tsx  types.ts
web/src/components/: Sidebar.tsx
web/src/layouts/: DefaultLayout.tsx
web/src/modules/: index.ts  store.ts
web/src/utils/: axios.ts  cncData.tsx  formatTime.tsx
(+197 files in other folders)
