[tool.poetry]
name = "cnc-dashboard"
version = "1.0.0"
description = ""
authors = ["jspark2000 <idpjs2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
fastapi = "^0.115.5"
asyncio = "^3.4.3"
black = "^24.10.0"
flake8 = "^7.1.1"
pandas = "^2.2.3"
python-socketio = "^5.11.4"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
dependency-injector = "^4.43.0"
pydantic-settings = "^2.6.1"
paho-mqtt = "^2.1.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
numpy = "^2.1.3"
elasticsearch = "^8.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
